...
                    VStack(spacing: 20) {
                        NavigationLink(destination: RecordingView(
                            viewModel: DependencyContainer.shared.recordingViewModel
                        )) {
                            MenuButton(title: "home.record_button".localized, icon: "mic.fill")
                        }
                        .accessibilityIdentifier("HomeRecordButton")

                        NavigationLink(destination: RecordingListView(
                            viewModel: RecordingListViewModel(
                                recordingRepository: DependencyContainer.shared.recordingRepository,
                                audioPlayer: DependencyContainer.shared.audioPlayer
                            ),
...
